# cpp-table

./: CMakeLists.txt  README.md
src/: files_list.cmake  hwparser.cpp  hwparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  overloads.cpp  overloads.h  parser.hpp  parseresult.h  tablemodel.cpp  tablemodel.h  tabletools.cpp  tabletools.h  tabletools.ui  typedefs.h  utils.cpp  utils.h
translations/: cpp-table_ru_RU.ts  cpp-table_ru_UA.ts  files_list.cmake
